--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-git
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="ccs/estilosindex.css"> 
+    <script src="https://kit.fontawesome.com/6131ecdde6.js" crossorigin="anonymous"></script>
+    <title>Hotelia</title>
+</head>
+<body>
+
+    
+</body>
+</html>
