--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/estilosindex.css"> 
+    <link rel="stylesheet" href="css/estilos.css"> 
     <script src="https://kit.fontawesome.com/6131ecdde6.js" crossorigin="anonymous"></script>
     <title>Hotelia</title>
 </head>
@@ -20,7 +20,40 @@
         <a href="#" class="item"><button class="navbar-button"><i class="fa-solid fa-user"></i> iniciar sesion</a></button>
     </div>
 </nav>
+<section class="seccion-texto">
+    <div id="texto">
+    <h2>
+        Estamos ubicados en el barrio La Cabrera al norte de Bogotá, en un contexto de lujo donde interactúan los negocios, el ocio
+        y el descanso, gracias a su estratégica ubicación rodeada de bancos, restaurantes de alta cocina, centros comerciales, almacenes 
+        de lujo y emblemáticos parques para aprovechar la naturaleza entre la ciudad caminay y hacer un poco de deporte al aire libre
+        están el parque del Virrey y El Parque de la 93. Además de nuestro exclusivo diseño, ponemos a tu disposición una oferta
+        gastronómica tan sofisticada como saludable a base de productos locales, cargados de lo mejor de la tradición colombiana.
+    </h2>   
+    </div>
+    <div class="imagen">
+        <img src="img/Hotelia horizontal negro.svg">
+    </div>
+</section>
 
-    
+<section id="features">
+    <h2 class="features-title">Razones por las que disfrutarás quedarte con nosotros</h2>
+    <div class="features-description">
+            <div class="feature feature-blue">
+                <i class="fa-solid fa-bell-concierge"></i>
+                <p>Lorem ipsum dolor</p>
+            </div>
+            <div class="feature feature-black">
+                <i class="fa-solid fa-bed"></i>
+                <p>Lorem ipsum dolor</p>
+            </div>
+            <div class="feature feature-blue">
+                <i class="fa-solid fa-wifi"></i>
+                <p>Lorem ipsum dolor</p>
+            </div>
+            <div class="feature feature-black">
+                <i class="fa-solid fa-dumbbell"></i>
+                <p>Lorem ipsum dolor</p>
+            </div>
+</section>  
 </body>
 </html>
