--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </h2>   
     </div>
     <div class="imagen">
-        <img src="img/Hotelia horizontal negro.svg">
+        <img src="img/Hotelia negro vertical.svg" width="200px">
     </div>
 </section>
 
