--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
     <nav>
     <div class="logo">
         <img src="img/Hotelia horizontal blanco.svg">
+        <i class="fa-solid fa-bars"></i>
     </div>
     <div class="menu">
         <a href="index.html" class="item">Inicio</a>
         <a href="ubicanos.html" class="item">Ubicanos</a>
         <a href="opiniones.html" class="item">Opiniones</a>
-        <a href="#" class="item"><button class="navbar-button"><i class="fa-solid fa-user"></i> iniciar sesion</a></button>
+        <hr class="menu-hr" noshade="">
+        <a href="#" class="item"><button class="navbar-button"><i class="fa-solid fa-user"></i> iniciar sesion</button></a>
     </div>
 </nav>
 <section class="seccion-texto">
