--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
         <a href="#" class="item"><button class="navbar-button"><i class="fa-solid fa-user"></i> iniciar sesion</button></a>
     </div>
 </nav>
+<section>
+    <div>
+        
+    </div>
+
+</section>
 <section class="seccion-texto">
     <div id="texto">
     <h2>
@@ -32,30 +38,27 @@
         gastronómica tan sofisticada como saludable a base de productos locales, cargados de lo mejor de la tradición colombiana.
     </h2>   
     </div>
-    <div class="imagen">
-        <img src="img/Hotelia negro vertical.svg" width="200px">
-    </div>
 </section>
 
-<section id="features">
-    <h2 class="features-title">Razones por las que disfrutarás quedarte con nosotros</h2>
-    <div class="features-description">
-            <div class="feature feature-blue">
-                <i class="fa-solid fa-bell-concierge"></i>
-                <p>Lorem ipsum dolor</p>
-            </div>
-            <div class="feature feature-black">
-                <i class="fa-solid fa-bed"></i>
-                <p>Lorem ipsum dolor</p>
-            </div>
-            <div class="feature feature-blue">
-                <i class="fa-solid fa-wifi"></i>
-                <p>Lorem ipsum dolor</p>
-            </div>
-            <div class="feature feature-black">
-                <i class="fa-solid fa-dumbbell"></i>
-                <p>Lorem ipsum dolor</p>
-            </div>
-</section>  
-</body>
-</html>
+    <section id="features">
+        <h2 class="features-title">Razones por las que disfrutarás quedarte con nosotros</h2>
+        <div class="features-description">
+                <div class="feature feature-blue">
+                    <i class="fa-solid fa-bell-concierge"></i>
+                    <p>Lorem ipsum dolor</p>
+                </div>
+                <div class="feature feature-black">
+                    <i class="fa-solid fa-bed"></i>
+                    <p>Lorem ipsum dolor</p>
+                </div>
+                <div class="feature feature-blue">
+                    <i class="fa-solid fa-wifi"></i>
+                    <p>Lorem ipsum dolor</p>
+                </div>
+                <div class="feature feature-black">
+                    <i class="fa-solid fa-dumbbell"></i>
+                    <p>Lorem ipsum dolor</p>
+                </div>
+    </section>  
+    </body>
+    </html>
