--- a/ej-css-grid.html
+++ b/ej-css-grid.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/eje-css-grid.css"> 
+    <script src="https://kit.fontawesome.com/e93f492f12.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/ej-css-grid.css">
+    <title>Hotelia layout grid</title>
 </head>
-<body>
-    <div id="container-grid">
+
+<div id="container-grid">
         <header>HEADER</header>
         <nav>NAVBAR</nav>
         <main>MAIN</main>
-        <aside>SIDERBAR</aside>
+        <aside>SIDEBAR</aside>
         <footer>FOOTER</footer>
     </div>
-</body>
-</html>
