--- a/ej-css-grid.html
+++ b/ej-css-grid.html
@@ -4,15 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/e93f492f12.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/ej-css-grid.css">
-    <title>Hotelia layout grid</title>
-</head>
 
-<div id="container-grid">
+    <title>Ejercicio de maquetación CSS GRID</title>
+</head>
+<body>
+    
+    <div id="container-grid">
         <header>HEADER</header>
         <nav>NAVBAR</nav>
         <main>MAIN</main>
         <aside>SIDEBAR</aside>
         <footer>FOOTER</footer>
+
     </div>
+</body>
+</html>
